--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -29,6 +29,46 @@
             </div>
         </header>
 
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Exciting Tours For Adventurous People 
+                    </h2>
+                </div>
+
+                <section class="grid-test">
+                    <div class="row">
+                        <div class="col-1-of-2">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                You're going to fall in love with nature
+                            </h3>
+                            <p class="paragraph">
+                                 lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus molestias veniam at quos assumenda. Sit perspiciatis qui odit beatae mollitia harum dolore itaque nostrum, aut voluptates minima placeat quo nihil!
+                            </p>
+
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Live adventurous like you never have before
+                            </h3>
+                            <p class="paragraph">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo temporibus reprehenderit ipsa mollitia laborum illum iste voluptatibus rem explicabo eum sapiente distinctio et corrupti consequuntur, pariatur at, eos non provident?
+                            </p>
+
+                            <a href="#" class="btn-text">
+                                Learn More &rarr;
+                            </a>
+                        </div>
+                        <div class="col-1-of-2">
+                            <div class="composition">
+                                <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                                <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                                <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                            </div>
+                        </div>
+                    </div>
+            </section>
+        </main>
+
         <!-- <section class="grid-test">
             <div class="row">
                 <div class="col-1-of-2">
